kubernetes-networks/canary/web1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-canary1
spec:
  selector:
    app: web-canary1
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web-canary1
spec:
 replicas: 3
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
     maxSurge: 100%
 selector:
   matchLabels:
     app: web-canary1
 template: 
   metadata:
     labels:
       app: web-canary1
   spec:
     containers:
     - name: web-canary1
       image: fuckir89/otus-web:1.0
       readinessProbe:
         httpGet:
           path: /index.html
           port: 8000
       livenessProbe:
         tcpSocket:
           port: 8000
       volumeMounts:
         - name: app
           mountPath: /app
     volumes:
     - name: app
       emptyDir: {}
